// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanelItem.ts should hide actions and match snapshot 1`] = `

<li aria-expanded="false"
    class="v-expansion-panel-item"
>
  <div tabindex="0"
       class="v-expansion-panel-item__header"
  >
    <span>
      foobar
    </span>
  </div>
  <div class="v-expansion-panel-item__body"
       style="display: none;"
  >
  </div>
</li>

`;

exports[`VExpansionPanelItem.ts should hide actions and match snapshot 2`] = `

<li aria-expanded="false"
    class="v-expansion-panel-item"
>
  <div tabindex="0"
       class="v-expansion-panel-item__header"
  >
    <span>
      foobar
    </span>
    <div class="v-expansion-panel-item__header__icon"
         name="fade-transition"
    >
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.expand
      </i>
    </div>
  </div>
  <div class="v-expansion-panel-item__body"
       style="display: none;"
  >
  </div>
</li>

`;
